<resources>
    <string name="app_name">Nav-electri</string>
    <string name="navigation">Navigation</string>
    <string name="charging_stations">Stations</string>
    <string name="attractions">Attractions</string>
    <string name="settings">Settings</string>
    <string name="user_location_permission_explanation">We want your localization</string>
    <string name="user_location_permission_not_granted">We have NO your location</string>
    <string name="start_navigation">Start navigation</string>
    <string name="no_number_phone">No number</string>
    <string name="no_empty_place">No information about place</string>
    <string name="empty_place_holder">Empty place:</string>
    <string name="phone_number_holder">Phone:</string>
    <string name="time_to_charge_holder">Time to charge:</string>
    <string name="no_open_hours_holder">Today open:</string>
    <string name="no_open_hours">No information about open hours</string>
    <string name="show_attraction">Show list attractions</string>
    <string name="hide_attraction">Hide list attractions</string>
    <string name="distance">Distance:</string>
    <string name="sponsor_holder">Sponsored material</string>
    <string name="help_icon_green">"This icon mean - electric station (slow)"</string>
    <string name="help_icon_red">"This icon mean - electric station (fast)"</string>
    <string name="help_icon_orange">"This icon mean - attraction (shopping center)"</string>
    <string name="help_icon_violet">"This icon mean - attraction (others)"</string>
    <string name="connect">Connect with car</string>
    <string name="disconnect">Disconnect from car</string>
    <string name="connect_text">Connected</string>
    <string name="disconnect_text">Disconnected</string>
    <string name="battery_text">Minimum battery state (%)</string>
    <string name="battery_value">75</string>
    <string name="text_navigation_battery_actual">Battery actual: %1$d%%</string>
    <string name="text_navigation_battery_after">Battery after road: %1$d%%</string>
    <string name="text_navigation_distance">Route has %1$.2fkm</string>
    <string name="point_A_text">From:</string>
    <string name="point_B_text">To:</string>
    <string name="find_route">Find route</string>


</resources>
