<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <RelativeLayout
        android:id="@+id/row_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@drawable/pin_green"/>

        <TextView
            android:id="@+id/help_pin_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            android:text="@string/help_icon_green"
            android:textStyle="normal|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@drawable/pin_red"/>

        <TextView
            android:id="@+id/help_pin_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            android:text="@string/help_icon_red"
            android:textStyle="normal|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@drawable/pin_orange"/>

        <TextView
            android:id="@+id/help_pin_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            android:text="@string/help_icon_orange"
            android:textStyle="normal|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_violet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@drawable/pin_violet"/>

        <TextView
            android:id="@+id/help_pin_violet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            android:text="@string/help_icon_violet"
            android:textStyle="normal|italic" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/row_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/my_connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@color/mapbox_blue"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/connect"
            android:textColor="@color/mapboxWhite" />

        <TextView
            android:id="@+id/my_connect_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="25dp"
            android:layout_alignParentStart="true"
            android:text="@string/disconnect_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_setting_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/my_setting_battery_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentStart="true"
            android:text="@string/battery_text" />

        <EditText
            android:id="@+id/my_setting_battery_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:text="@string/battery_value"
            android:inputType="numberDecimal"
            android:autofillHints="@string/battery_text"
            android:labelFor="@+id/my_setting_battery_input"

            />
    </RelativeLayout>


</LinearLayout>