<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="52.406374"
        mapbox:mapbox_cameraTargetLng="16.9251681"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
        mapbox:mapbox_renderTextureMode="true"
        mapbox:mapbox_cameraZoom="11" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="120dp"
        android:background="@color/mapboxWhite"
        android:text="@string/text_navigation_distance" />

    <TextView
        android:id="@+id/textViewBatteryPercentageActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        android:background="@color/mapboxWhite"
        android:text="@string/text_navigation_battery_actual" />

    <TextView
        android:id="@+id/textViewBatteryPercentageAfter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:background="@color/mapboxWhite"
        android:text="@string/text_navigation_battery_after" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@color/mapboxGrayLight"
        android:enabled="false"
        android:text="@string/start_navigation"
        android:textColor="@color/mapboxWhite" />

</RelativeLayout>